tests/models/enum/unnamed/u32/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2.0)]
        u32
    ),
}
fn main() {}
